--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
                                         get this done.
                                     </p>
                                 </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -101,6 +106,11 @@
                                         called
                                         in?
                                     </p>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
                                 </div>
                             </div>
                         </div>
@@ -118,6 +128,11 @@
                                         what's coming.
                                     </p>
                                 </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -133,6 +148,11 @@
                                         this
                                         out. Never know what can happen after the party...
                                     </p>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
                                 </div>
                             </div>
                         </div>
@@ -150,6 +170,11 @@
                                         from peers'?
                                     </p>
                                 </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -166,6 +191,11 @@
                                         saw last time.
                                     </p>
                                 </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
                             </div>
                         </div>
                         <div class="card">
@@ -181,6 +211,30 @@
                                         sound familiar
                                     </p>
                                 </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="side-tab">
+                            </div>
+                            <div class="card-content">
+                                <h3>
+                                    Get a new glass
+                                </h3>
+                                <div class="card-text">
+                                    <p>
+                                        Did Jeff Winger reinforce his walls? It's getting harder to eavesdrop on him
+                                    </p>
+                                </div>
+                                <div class="card-buttons">
+                                    <img src="assets/view.svg" alt="Favourite Button">
+                                    <img src="assets/favourite.svg" alt="Favourite Button">
+                                    <img src="assets/share.svg" alt="Favourite Button">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -188,7 +242,7 @@
                 <div class="main-body-right">
                     <div class="announcement-pane">
                         <div class="announcement">
-                            <h5>Cannabis Found Growing In Foyer</h5>
+                            <h5>Cannabis found growing in foyer</h5>
                             <p>Whoever is growing the patch of cannabis in the building, congratulations! You have won a
                                 prize. Please report to security to collect</p>
                         </div>
@@ -197,8 +251,28 @@
                             <p>Puppy parade on the quad at 12:30. Pet your stresses away!</p>
                         </div>
                         <div class="announcement">
-                            <h5>Halloween Party Tacos</h5>
-                            <p>If you consumed the tacos from the hallowwen bash, please report to Dean Pelton immediately</p>
+                            <h5>Halloween party tacos</h5>
+                            <p>If you consumed the tacos from the hallowwen bash, please report to Dean Pelton
+                                immediately</p>
+                        </div>
+                        <div class="announcement">
+                            <h5>Stash of purple pens found in study room</h5>
+                            <p>If these belong to you, please come to security to pick them up</p>
+                        </div>
+                    </div>
+                    <h4>TRENDING</h4>
+                    <div class="trending-pane">
+                        <div class="user-name">
+                            <strong class="twitter-username">@JeffWinger:</strong> Ego death is real.
+                        </div>
+                        <div class="user-name">
+                            <strong class="twitter-username">@AbedNadir:</strong> Cool. Cool cool cool.
+                        </div>
+                        <div class="user-name">
+                            <strong class="twitter-username">@BrittaPerry:</strong> Silence is injustice.
+                        </div>
+                        <div class="user-name">
+                            <strong class="twitter-username">@AnnieEdison:</strong> Signup for toastmasters today!!!
                         </div>
                     </div>
                 </div>
